# rust

./: Cargo.toml  README.md
backend/: app.py  model.pkl  requirements.txt  tokenizer.pkl
forntend/: index.html  script.js
frontend/: index.html  script.js  style.css
public/: style.css
src/: main.rs
